<resources>
    <string name="app_name">Pictura++</string>
    <string name="msg">Please enable all permissions</string>
    <string name="picture_button">Take picture</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="eigenfaces">Eigenfaces</string>
    <string name="fisherfaces">Fisherfaces</string>
    <string name="threshold_face">Face threshold:</string>
    <string name="threshold_distance">Distance:</string>
    <string name="maximum_images">Maximum number of images:</string>
    <string name="clear_button">Clear training set</string>
    <string name="flip">Flip</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="put_masks_on_faces">PUT MASKS ON FACES</string>
    <string name="remove_differences">REMOVE DIFFERENCES</string>
    <string name="recognize_face">RECOGNIZE FACE</string>
    <string name="add_face_filters">ADD FACE FILTERS</string>
    <string name="chose_image">Chose image</string>
    <string name="take_image">Take image</string>
    <string name="put_masks">PUT MASKS</string>
    <string name="save_image">SAVE IMAGE</string>
    <string name="do_action">Do Action</string>
    <string name="add_picture">Add picture</string>
    <string name="element_added">Element added</string>
    <string name="slide_left_to_right"><![CDATA[SLIDE FROM LEFT TO RIGHT IN ORDER TO USE MORE FILTERS ->]]></string>
    <string name="chances_for_face_detection">Chances for face detection</string>
    <string name="results_found">Results found</string>
    <string name="results_found1">Results Found</string>
    <string name="face_detected">Face detected </string>
    <string name="unknown_face_result">Unknown face. Add face to the database or check the distance.</string>
    <string name="false_recognition">False recognition. Add the fase to the database</string>
    <string name="img_not_a_face">Image is not a face.</string>
    <string name="training_comple">Training complete</string>
    <string name="keep_training">Keep training...</string>
    <string name="two_different">Pictura++ needs two different faces</string>
    <string name="atention1">Note that by entering here, you agree that your pictures and pictures you take can be stored in an online database, you should read help before entering</string>
    <string name="atention2">The more you increase this the more mistakes will app make , but if you deacrese it a lot it will detect almost no faces, so the best is to compromise</string>
    <string name="atention3">Distance in percent according to the screen</string>
    <string name="change_filter">Change filter</string>
    <string name="perm_granted">Permission granted</string>
    <string name="img_saved">Image Saved in /Storage/Pictures</string>
    <string name="processing_old">Still processing old image...</string>
    <string name="running">Still training...</string>
    <string name="failed_to_measure">Failed to measure distance</string>
    <string name="perm_required">Permission required!</string>
    <string name="traininggg">Training</string>
    <string name="training_complete">Training complete</string>
    <string name="training_failed">Training failed</string>
    <string name="do_actionn"><![CDATA[Do action>]]></string>
    <string name="images">pictures</string>
    <string name="strange_mask">Strange mask</string>
    <string name="zombie_face">Zombie face</string>
    <string name="anon_mask">Anonymous mask</string>
    <string name="avatar_face">Avatar face</string>
    <string name="skull_face">Skull face</string>
    <string name="pixelize_">Pixelize</string>
    <string name="back">BACK</string>
    <string name="remove_dynamic_objects">Remove dynamic objects</string>
    <string name="cut_out_diffs">Cut out differences</string>
    <string name="show_difs">Show differences</string>
    <string name="please_check_connection">Please check your connection to the internet before using this feautre !</string>
    <string name="result">Result</string>
    <string name="new_face">New face</string>
    <string name="cancelll">Cancel</string>
    <string name="cmn_soon">MORE COOMING SOON ONLINE</string>
</resources>
