<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context="com.example.miskewolf.opencvradi.SplashActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#ffffff"
        android:textAlignment="center"
        android:text="@string/atention1"
    />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="420dp"
    android:background="#ffffff"
        android:textAlignment="center"
    android:text="@string/atention2"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:background="#ffffff"
        android:textAlignment="center"
        android:textSize="17sp"
        android:text="@string/please_check_connection"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="534dp"
        android:background="#ffffff"
        android:text="@string/atention3"
        />
    <steelkiwi.com.library.DotsLoaderView
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:dlv_item_drawable="@drawable/circle_background"
        app:dlv_line_color="#ffffff"
        />

</RelativeLayout>
