
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context="com.example.miskewolf.opencvradi.AutoDetection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pop_up_orange"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <FrameLayout android:id="@+id/image_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/yrimg" />

        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        >

    <Button
        android:layout_width="0dp"
        android:id="@+id/chose"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        style="?metaButtonBarButtonStyle"
        android:background="@color/black_overlay"
        android:text="@string/chose_image"
        android:textColor="@android:color/white"

        />
        <Button
            android:layout_width="0dp"
            android:id="@+id/photo"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            style="?metaButtonBarButtonStyle"
            android:background="@color/black_overlay"
            android:text="@string/take_image"
            android:textColor="@android:color/white"

            />
        <Button
            android:layout_width="0dp"
            android:id="@+id/save"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            style="?metaButtonBarButtonStyle"
            android:background="@color/black_overlay"
            android:text="@string/save_image"
            android:textColor="@android:color/white"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="0dp"
            android:id="@+id/put"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            style="?metaButtonBarButtonStyle"
            android:background="@color/black_overlay"
            android:text="@string/put_masks"
            android:textColor="@android:color/white"

            />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/progressBarHolder"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        android:alpha="0.4"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="200dp"
            android:id="@+id/animat"
            android:layout_height="200dp"
            android:layout_gravity="center"
            />

    </FrameLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/background"
        android:fitsSystemWindows="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar1"
                android:elevation="4dp"
                android:layout_marginTop="-17dp"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/MyGreenLight"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/arrow_text_margin"
                android:layout_marginLeft="@dimen/arrow_text_margin"
                android:layout_marginRight="@dimen/arrow_text_margin"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/StrangeMask"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_weight="0"
                        android:button="@drawable/custom_checkbox_selector"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/strange_mask" />

                    <RadioButton
                    android:layout_marginTop="8dp"
                    android:id="@+id/ZombieFace"
                        android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_weight="0"
                    android:layout_height="wrap_content"
                    android:button="@drawable/custom_zombie"
                    android:text="@string/zombie_face" />

                    <RadioButton
                        android:layout_marginTop="8dp"
                        android:id="@+id/Anonymous"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_weight="0"
                        android:layout_height="wrap_content"
                        android:button="@drawable/custom_anonym"
                        android:text="@string/anon_mask" />
                    <RadioButton
                    android:layout_marginTop="8dp"
                    android:id="@+id/Avatar"
                        android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_weight="0"
                    android:layout_height="wrap_content"
                    android:button="@drawable/custon_avatar"
                    android:text="@string/avatar_face" />
                    <RadioButton
                        android:layout_marginTop="8dp"
                        android:id="@+id/fire"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_weight="0"
                        android:layout_height="wrap_content"
                        android:button="@drawable/custom_fire"
                        android:text="@string/skull_face" />

                    <RadioButton
                        android:layout_marginTop="8dp"
                        android:id="@+id/detect"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_weight="0"
                        android:layout_height="wrap_content"
                        android:button="@drawable/custom_pixelize"
                        android:text="@string/pixelize_" />


                </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cmn_soon"
                />
            </LinearLayout>

            </LinearLayout>


    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>